agregado lector de objetivos, actualizacion lector en general y creador de elementos