@@ -1,7 +1,9 @@
 package edu.fiuba.algo3;
 
+import edu.fiuba.algo3.elementos.Continente;
 import edu.fiuba.algo3.elementos.Jugador;
 import edu.fiuba.algo3.elementos.Pais;
+import edu.fiuba.algo3.excepciones.NoSePudoLeerExcepcion;
 import edu.fiuba.algo3.excepciones.PaisNoExisteException;
 import edu.fiuba.algo3.excepciones.PaisNoTePerteneceException;
 import edu.fiuba.algo3.excepciones.SeAlcanzoLaCantidadMaximaException;
@@ -10,59 +12,67 @@ import edu.fiuba.algo3.modelo.Objetivo;
 import edu.fiuba.algo3.modelo.ObjetivoConquista;
 import edu.fiuba.algo3.modelo.ObjetivoDestruccion;
 import org.json.simple.parser.ParseException;
-import org.junit.Test;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import org.junit.Test;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 public class ObjetivoTest {
 
     @Test
-    public void seTieneTodosLosPaisesYElObjetivoComunSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException {
+    public void seTieneTodosLosPaisesYElObjetivoComunSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(List.of(new Jugador("Pepe")));
         Juego juego = new Juego(jugadores);
+        Continente americaDelSur = new Continente("America del Sur", 0);
         Pais argentina = juego.buscarPais("Argentina");
-        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(argentina)));
+        americaDelSur.agregarPais(argentina);
+        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(americaDelSur)), new ArrayList<>(List.of(1)));
 
         assertTrue(objetivo.cumplido(jugadores.get(0)));
     }
 
     @Test
-    public void noSeTieneTodosLosPaisesYElObjetivoComunNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException {
+    public void noSeTieneTodosLosPaisesYElObjetivoComunNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(Arrays.asList(new Jugador("Pepe"), new Jugador("Carlos")));
         Juego juego = new Juego(jugadores);
 
         Jugador jugador1 = jugadores.get(0);
         Jugador jugador2 = jugadores.get(1);
 
+        Continente americaDelSur = new Continente("America del Sur", 0);
         Pais argentina = juego.buscarPais("Argentina");
+        americaDelSur.agregarPais(argentina);
 
         if (jugador1.tienePais(argentina)){
             jugador1.perderPais(argentina);
             jugador2.agregarPais(argentina);
         }
 
-        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(argentina)));
+        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(americaDelSur)), new ArrayList<>(List.of(1)));
 
         assertFalse(objetivo.cumplido(jugador1));
     }
 
     @Test
-    public void seTieneTodosLosPaisesAConquistarYElObjetivoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException {
+    public void seTieneTodosLosPaisesAConquistarYElObjetivoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(Arrays.asList(new Jugador("Pepe"), new Jugador("Carlos")));
         Juego juego = new Juego(jugadores);
 
         Jugador jugador1 = jugadores.get(0);
         Jugador jugador2 = jugadores.get(1);
 
+        Continente americaDelSur = new Continente("America del Sur", 0);
         Pais argentina = juego.buscarPais("Argentina");
         Pais brasil = juego.buscarPais("Brasil");
         Pais chile = juego.buscarPais("Chile");
+        americaDelSur.agregarPais(argentina);
+        americaDelSur.agregarPais(chile);
+        americaDelSur.agregarPais(brasil);
 
         if (jugador2.tienePais(argentina)){
             jugador2.perderPais(argentina);
@@ -77,22 +87,26 @@ public class ObjetivoTest {
             jugador1.agregarPais(chile);
         }
 
-        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(Arrays.asList(argentina, brasil, chile)));
+        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(americaDelSur)), new ArrayList<>(List.of(3)));
 
         assertTrue(objetivo.cumplido(jugador1));
     }
 
     @Test
-    public void noSeTieneTodosLosPaisesAConquistarYElObjetivoNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException {
+    public void noSeTieneTodosLosPaisesAConquistarYElObjetivoNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, PaisNoExisteException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(Arrays.asList(new Jugador("Pepe"), new Jugador("Carlos")));
         Juego juego = new Juego(jugadores);
 
         Jugador jugador1 = jugadores.get(0);
         Jugador jugador2 = jugadores.get(1);
 
+        Continente americaDelSur = new Continente("America del Sur", 0);
         Pais argentina = juego.buscarPais("Argentina");
         Pais brasil = juego.buscarPais("Brasil");
         Pais chile = juego.buscarPais("Chile");
+        americaDelSur.agregarPais(argentina);
+        americaDelSur.agregarPais(brasil);
+        americaDelSur.agregarPais(chile);
 
         if (jugador2.tienePais(argentina)){
             jugador2.perderPais(argentina);
@@ -107,13 +121,13 @@ public class ObjetivoTest {
             jugador2.agregarPais(chile);
         }
 
-        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(Arrays.asList(argentina, brasil, chile)));
+        Objetivo objetivo = new ObjetivoConquista(new ArrayList<>(List.of(americaDelSur)), new ArrayList<>(List.of(3)));
 
         assertFalse(objetivo.cumplido(jugador1));
     }
 
     @Test
-    public void seVencioAlJugadorADestruirYElObjetivoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException {
+    public void seVencioAlJugadorADestruirYElObjetivoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(Arrays.asList(new Jugador("Pepe"), new Jugador("Carlos")));
         Juego juego = new Juego(jugadores);
 
@@ -127,7 +141,7 @@ public class ObjetivoTest {
     }
 
     @Test
-    public void noSeVencioAlJugadorADestruirYElObjetivoNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException {
+    public void noSeVencioAlJugadorADestruirYElObjetivoNoSeCompleta() throws PaisNoTePerteneceException, ParseException, IOException, SeAlcanzoLaCantidadMaximaException, NoSePudoLeerExcepcion {
         ArrayList<Jugador> jugadores = new ArrayList<>(Arrays.asList(new Jugador("Pepe"), new Jugador("Carlos")));
         Juego juego = new Juego(jugadores);
 
